@@ -47,8 +47,12 @@ class AtlasProdTaskRefiner (TaskRefinerBase):
                     outFileTemplate = tmpOutTemplateMap['filenameTemplate']
                     if re.search('\.\d+$',outFileTemplate) == None and not outFileTemplate.endswith('.panda.um'):
                         tmpOutTemplateMap['filenameTemplate'] = outFileTemplate + '.1'
-            # set destination if nessesary
+            # extract datatype and set destination if nessesary
+            datasetTypeList = []
             for datasetSpec in self.outDatasetSpecList:
+                datasetType = DataServiceUtils.getDatasetType(datasetSpec.datasetName)
+                if datasetType != '':
+                    datasetTypeList.append(datasetType)
                 storageToken = DataServiceUtils.getDestinationSE(datasetSpec.storageToken)
                 if storageToken != None:
                     tmpSiteList = self.ddmIF.getInterface(self.taskSpec.vo).getSitesWithEndPoint(storageToken,self.siteMapper,'production')
@@ -60,6 +64,24 @@ class AtlasProdTaskRefiner (TaskRefinerBase):
                 self.taskSpec.numThrottled = 0
             # set to register datasets
             self.taskSpec.setToRegisterDatasets()
+            # set transient to parent datasets
+            if self.taskSpec.processingType in ['merge'] and not self.taskSpec.parent_tid in [None,self.taskSpec.jediTaskID]:
+                # get parent                                                                                                                              
+                tmpStat,parentTaskSpec = self.taskBufferIF.getTaskDatasetsWithID_JEDI(self.taskSpec.parent_tid,None,False)
+                if tmpStat and parentTaskSpec != None:
+                    # set transient to parent datasets
+                    metaData = {'transient':True}
+                    for datasetSpec in parentTaskSpec.datasetSpecList:
+                        if datasetSpec.type in ['log','output']:
+                            datasetType = DataServiceUtils.getDatasetType(datasetSpec.datasetName)
+                            if datasetType != '' and datasetType in datasetTypeList:
+                                tmpLog.info('set metadata={0} to parent jediTaskID={1}:datasetID={2}:Name={3}'.format(str(metaData),
+                                                                                                                      self.taskSpec.parent_tid,
+                                                                                                                      datasetSpec.datasetID,
+                                                                                                                      datasetSpec.datasetName))
+                                for metadataName,metadaValue in metaData.iteritems():
+                                    self.ddmIF.getInterface(self.taskSpec.vo).setDatasetMetadata(datasetSpec.datasetName,
+                                                                                                 metadataName,metadaValue)
         except:
             errtype,errvalue = sys.exc_info()[:2]
             tmpLog.error('doBasicRefine failed with {0}:{1}'.format(errtype.__name__,errvalue))
